# hybridclr-test

Assets/Scenes/: First.unity  Second.unity
Assets/Scripts/: FileUtility.cs  FirstScene.cs  HotUpdateDllInterface.cs  ImportInterfaceAuto.cs  LoadHotUpdateDll.cs  Main.cs  SecondScene.cs
Assets/Scripts/Hotfix/: AOTCallAttribute.cs  ExportInterface.cs  ExportInterfaceAuto.cs  Hotfix.asmdef
HybridCLRData/LocalIl2CppData-WindowsEditor/MonoBleedingEdge/lib/: libMonoPosixHelper.dylib
HybridCLRData/LocalIl2CppData-WindowsEditor/MonoBleedingEdge/lib/mono/4.5/: System.Collections.Immutable.dll.dylib  System.Reflection.Metadata.dll.dylib  csc.exe.dylib
Program/Fight/: .gitignore  Fight.vcxproj
Program/GradleProjs/: ComplieSo.py  DeleteTempFile.bat  MakeSO.bat  NDKConfig.txt  SVNCommit.bat  build.gradle  local.properties  settings.gradle  sooutputconfig.txt  staticLibsConfig.txt  toolChainConfig.txt  utils.gradle
Program/GradleProjs/gradle/wrapper/: gradle-wrapper.properties
Program/GradleProjs/libFight/: CMakeLists.txt  build.gradle
Program/GradleProjs/libFight/src/main/: AndroidManifest.xml
Program/GradleProjs/libFight/src/main/res/values/: strings.xml
ProjectSettings/: EditorBuildSettings.asset  HybridCLRSettings.asset  ProjectSettings.asset
